--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -1,4 +1,4 @@
-FROM mpsej0/chisel
+FROM mpsej0/chisel:sodor
 
 RUN apt-get install -y python python3-pip python3-setuptools \
     && pip3 install jupyter \
